crates/nx-syntax/tests/fixtures/invalid/multiple_errors.nx
// Multiple syntax errors
let x = {
let y = }
fn broken(
    let z = 42
